@@ -7,7 +7,7 @@ package Satsuki::DB_mysql;
 use Satsuki::AutoLoader;
 use Satsuki::DB_share;
 use DBI ();
-our $VERSION = '1.10';
+our $VERSION = '1.11';
 #-------------------------------------------------------------------------------
 # データベースの接続属性 (DBI)
 my $DB_attr = {AutoCommit => 1, RaiseError => 0, PrintError => 0};
