@@ -7,6 +7,8 @@
 -【テーマ】satsuki2のマルチサイドバー表示時のサイドバーの幅を可変にしました。
 -【fix】nature-dark テーマを選ぶとエラーが表示される。
 -【fix】シンタックハイライトで言語「c」を指定するとセンタリングされてしまう。（[http://test.blog.abk.nu/02829:Thanks to tester]）v
+-【fix】PostgreSQL/MySQL運用時、タグ一覧からのタグ編集がうまく行かない。((DB_pg/DB_mysqlにおいて、条件節において空の配列を指定したときの動作が正しくない不具合の修正。))
+
 
 *Ver3.0 RC1 : 2015/07/22
 
